# agentic-network-tools

./: .gitignore  README.md  field-lessons.md
agentic-network-ghost-troubleshooter/: README.md  pyproject.toml
agentic-network-ghost-troubleshooter/demo/: README.md  sample_config.env
agentic-network-ghost-troubleshooter/demo/use_case_a/: PROMPT.txt  setup.sh
agentic-network-ghost-troubleshooter/demo/use_case_b/: PROMPT.txt  setup.sh  teardown.sh
agentic-network-ghost-troubleshooter/demo/use_case_c/: setup.sh  teardown.sh
agentic-network-ghost-troubleshooter/demo/use_case_d/: PROMPT.txt  setup.sh  teardown.sh
agentic-network-ghost-troubleshooter/demo/use_case_e/: teardown.sh
agentic-network-ghost-troubleshooter/docs/: product-requirements.md
agentic-network-ghost-troubleshooter/tests/: conftest.py  test_dispatch.py  test_integration.py  test_loop.py  test_report.md  test_startup.py  test_static.py
netfilter-inspector/iptables-parser/: .env.example  README.md  iptables_diff.py  iptables_explain.py  iptables_parser.py  pyproject.toml
netfilter-inspector/iptables-parser/docs/: design.md  product-requirements.md  test_plan.md
netfilter-inspector/iptables-parser/iptables-samples/: ubuntu2404-cis-hardened_snapshot.json  ubuntu2404-clean-counters.txt  ubuntu2404-clean-counters_snapshot.json  ubuntu2404-clean-ip6_snapshot.json  ubuntu2404-clean_snapshot.json  ubuntu2404-clean_vs_ubuntu2404-cis-hardened_diff.json  ubuntu2404-clean_vs_ubuntu2404-docker_diff.json  ubuntu2404-clean_vs_ubuntu2404-log-mark-snat_diff.json  ubuntu2404-docker-counters.txt  (+14 more)
(+313 files in other folders)
